[package]
name = "voidmap"
version = "1.1.5"
authors = ["Tyler Neely <t@jujit.su>", "Katharina Fey <kookie@spacekookie.de>"]
description = "terminal mind-map + task tracker + tsdb"
license = "GPL-3.0"
homepage = "https://github.com/void-rs/void"
keywords = ["cli", "commandline", "visualization", "ui"]
edition = "2018"

[[test]]

name = "test"
path = "test/test.rs"

[features]
default = ["sdl2-static-link", "embed-fonts"]
sdl2-static-link = ["skulpin/sdl2-static-link"]
embed-fonts = []

[dependencies]
dirs = "1.0"
clap = "2.0"
log = "0.3"
lazy_static = "0.2"
time = "0.1"
hyper = "0.10"
getopts = "0.2"
protobuf = "1.1"
rand = "0.3"
libc = "0.2"
regex = "1.1"
unicode-segmentation = "0.1"
clippy = { version = "0.0", optional = true }
fs2 = "0.4.1"
skulpin = { git = "https://github.com/Kethku/skulpin", branch = "sdl2" }
skribo = { git = "https://github.com/linebender/skribo" }
font-kit = "0.5.0"
lru = "0.4.3"
rust-embed = { version = "5.2.0", features = ["debug-embed"] }
unicode-segmentation = "1.6.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[dev-dependencies]
quickcheck = "0.3"
